<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/waitingRoomLayout"
    app:destination="@+id/WaitingRoomFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home_list"
    tools:context=".WaitingRoomFragment">

    <!--  Title  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/waitingRoomTitle"

        android:layout_marginTop="15sp"

        style="@style/AppNameTextStyle"
        android:text="@string/waiting_room"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/waitingRoomIpAddress"

        android:text="@string/waiting_room_ip"

        android:layout_marginTop="20dp"
        style="@style/TitleTextStyle"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waitingRoomTitle" />

    <TextView
        android:id="@+id/adressIp"
        style="@style/DefaultTextStyleWhite"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="XXX.X.X.XX:YYYY"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waitingRoomIpAddress" />

    <!-- Player list -->

    <!--  Join  -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players_waiting_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="57dp"
        android:layout_weight="1"
        android:padding="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="@+id/adressIp"
        tools:layout_editor_absoluteX="84dp"
        tools:listitem="@layout/player_waiting_item">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/readyButton"
        style="@style/TitleTextStyle"

        android:layout_width="@dimen/buttonWidth"

        android:layout_height="@dimen/buttonHeight"

        android:background="@drawable/text_scroll"
        android:paddingLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ready_button"
        app:layout_constraintBottom_toTopOf="@id/quitButtonWaitingRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!--  QUIT  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/quitButtonWaitingRoom"
        android:layout_width="130sp"
        android:layout_height="@dimen/buttonHeight"

        style="@style/TitleTextStyle"

        android:layout_marginBottom="15dp"

        android:background="@drawable/text_scroll"
        android:text="@string/return_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>